--- a/srcs/nginx/src/index/index.html
+++ b/srcs/nginx/src/index/index.html
@@ -96,14 +96,14 @@
                 <!-- ***** Mini Box Start ***** -->
                 <div class="row">
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                        <a href="/wordpress" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
                             <strong>WordPress</strong>
                             <span>create your WordPress blog or website.</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                        <a href="/phpmyadmin" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
                             <strong>PhpMyAdmin</strong>
                             <span>web application for manage MySQL database.</span>
