--- a/srcs/nginx/src/index/index.html
+++ b/srcs/nginx/src/index/index.html
@@ -71,7 +71,7 @@
                         <p>Ft_services will introduce you to Kubernetes. You will discover cluster management and
                             deployment with Kubernetes. You will virtualize a network and do "clustering"</p>
                         <p><strong>👇Kubernetes Web Dashboard👇</strong></p>
-                        <a href="#features" class="main-button-slider">Kube Dashboard</a>
+                        <a href="http://127.0.0.1:49860/api/v1/namespaces/kubernetes-dashboard/services/http:kubernetes-dashboard:/proxy/#/overview" class="main-button-slider">Kube Dashboard</a>
                     </div>
                 </div>
             </div>
