--- a/srcs/nginx/src/index/index.html
+++ b/srcs/nginx/src/index/index.html
@@ -40,13 +40,13 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="#" class="logo">
+                        <a href="/" class="logo">
                             <img src="assets/images/logo.png" alt="Softy Pinko"/>
                         </a>
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav" aria-placeholder="yslati">
-                            <li><a href="#yslati" class="active">YSLATI</a></li>
+                            <li><a href="https://profile.intra.42.fr/users/yslati" class="active">YSLATI</a></li>
                         </ul>
                         <!-- <a class='menu-trigger'>
                             <span>Menu</span>
@@ -61,7 +61,6 @@
 
     <!-- ***** Welcome Area Start ***** -->
     <div class="welcome-area" id="welcome">
-
         <!-- ***** Header Text Start ***** -->
         <div class="header-text">
             <div class="container">
@@ -92,9 +91,15 @@
                         </div>
                     </div>
                 </div>
-
                 <!-- ***** Mini Box Start ***** -->
                 <div class="row">
+                    <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                        <a href="/" class="mini-box">
+                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
+                            <strong>nginx</strong>
+                            <span>is a free web server software as well as a reverse proxy written by Igor Sysoev.</span>
+                        </a>
+                    </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="/wordpress" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
@@ -110,7 +115,7 @@
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
-                        <a href="#" class="mini-box">
+                        <a href=":3000" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
                             <strong>Grafana</strong>
                             <span>is the open source analytics & monitoring solution for database.</span>
@@ -119,26 +124,48 @@
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>yoo</strong>
-                            <span>bla bla bla.</span>
+                            <strong>ftps</strong>
+                            <span>is a communication protocol for exchange of files.</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>yooo</strong>
-                            <span>bla bla bla bla.</span>
+                            <strong>ssh</strong>
+                            <span>a computer program and a secure communication protocol.</span>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-3 col-sm-6 col-6">
                         <a href="#" class="mini-box">
                             <i><img src="assets/images/work-process-item-01.png" alt=""></i>
-                            <strong>miao</strong>
-                            <span>miao miaw meao.</span>
+                            <strong>MySQL</strong>
+                            <span>is a relational database management system.</span>
+                        </a>
+                    </div>
+                    <div class="col-lg-2 col-md-3 col-sm-6 col-6">
+                        <a href="#" class="mini-box">
+                            <i><img src="assets/images/work-process-item-01.png" alt=""></i>
+                            <strong>InfluxDB</strong>
+                            <span>is a time series database designed to handle high write and query loads.</span>
                         </a>
                     </div>
                 </div>
                 <!-- ***** Mini Box End ***** -->
+            </div>
+        </div>
+    </section>
+
+    <section class="mini" id="work-process">
+        <div class="mini-content">
+            <div class="container">
+                <div class="row">
+                    <div class="offset-lg-3 col-lg-6">
+                        <div class="info">
+                            <h1>Data Bases Managment</h1>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </section>
@@ -184,7 +211,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="copyright">Copyright &copy; By <strong>yslati</strong> - <strong>1337</strong></p>
+                    <p class="copyright">Copyright &copy; By <strong><a href="https://profile.intra.42.fr/users/yslati">YSLATI</a></strong> - <strong>1337</strong></p>
                 </div>
             </div>
         </div>
